[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19" # 时间格式化工具
colored = "2.0.0" # 控制台上色
exitfailure = "0.5.1" # 错误处理
reqwest = {version = "0.11", features = ["json"]} # 发送网络请求
serde = "1.0.114" 
serde_derive = "1.0.114" 
serde_json = "1.0.56" 
structopt = "0.3.21" # 解析命令行参数
tokio = {version = "1", features = ["full"]}
